workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:04:20 **** Incremental Build of configuration Debug for project calibracao ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/usr/local/include/opencv -I"/home/eller/PVC/workspace/calibracao/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp: In function ‘int main(int, char**)’:
../src/Main.cpp:16:41: error: no match for call to ‘(cv::FileStorage) (std::string&, cv::FileStorage::<anonymous enum>)’
     fs(distortion, cv::FileStorage::READ);
                                         ^
../src/Main.cpp:20:41: error: no match for call to ‘(cv::FileStorage) (std::string&, cv::FileStorage::<anonymous enum>)’
     fs(intrinsics, cv::FileStorage::READ);
                                         ^
make: *** [src/Main.o] Error 1
23:04:56 **** Incremental Build of configuration Debug for project calibracao ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/usr/local/include/opencv -I"/home/eller/PVC/workspace/calibracao/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp: In function ‘int main(int, char**)’:
../src/Main.cpp:20:41: error: no match for call to ‘(cv::FileStorage) (std::string&, cv::FileStorage::<anonymous enum>)’
     fs(intrinsics, cv::FileStorage::READ);
                                         ^
make: *** [src/Main.o] Error 1
23:05:06 **** Incremental Build of configuration Debug for project calibracao ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/usr/local/include/opencv -I"/home/eller/PVC/workspace/calibracao/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp: In function ‘int main(int, char**)’:
../src/Main.cpp:20:24: error: redeclaration of ‘cv::FileStorage fs’
     cv::FileStorage fs(intrinsics, cv::FileStorage::READ);
                        ^
../src/Main.cpp:16:21: error: ‘cv::FileStorage fs’ previously declared here
     cv::FileStorage fs(distortion, cv::FileStorage::READ);
                     ^
make: *** [src/Main.o] Error 1
23:05:48 **** Incremental Build of configuration Debug for project calibracao ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/usr/local/include/opencv -I"/home/eller/PVC/workspace/calibracao/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: calibracao
Invoking: GCC C++ Linker
g++ -L/usr/local/lib -o "calibracao"  ./src/Main.o ./src/PointClickDistance.o   -lopencv_features2d -lopencv_objdetect -lopencv_calib3d -lopencv_core -lopencv_flann -lopencv_legacy -lopencv_contrib -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video
Finished building target: calibracao
 
23:09:09 **** Incremental Build of configuration Debug for project calibracao ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/usr/local/include/opencv -I"/home/eller/PVC/workspace/calibracao/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: calibracao
Invoking: GCC C++ Linker
g++ -L/usr/local/lib -o "calibracao"  ./src/Main.o ./src/PointClickDistance.o   -lopencv_features2d -lopencv_objdetect -lopencv_calib3d -lopencv_core -lopencv_flann -lopencv_legacy -lopencv_contrib -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video
Finished building target: calibracao
 
